# backend/src/main/java/com/mlb/mlbportal/models/enums/Division.java
@@ -1,0 +1,7 @@
+package com.mlb.mlbportal.models.enums;
+
+public enum Division {
+    EAST,
+    CENTRAL,
+    WEST   
+}
